# trade_electro_platform_project

./: README.md  data_seller.json  data_users.json  pyproject.toml
config/: settings.py  urls.py
seller/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
seller/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
